sync county-level contact info

--- a/02_eda_hospital_level.ipynb
+++ b/02_eda_hospital_level.ipynb
@@ -64,7 +64,8 @@
     "- we also filter to only include hospitals w/ ICU beds\n",
     "- unfortunately we don't look into FQHCs, as they may not be the place to receive urgent ventilator care\n",
     "- might want to up-weight larger hospitals, as they might have more capacity\n",
-    "- 10-20% ventilators will be used for other stuff"
+    "- 10-20% ventilators will be used for other stuff\n",
+    "- use income information?"
    ]
   },
   {
@@ -217,19 +218,6 @@
     "wks.update_value('A1', \"Hospital-level contact information\")\n",
     "wks.update_value('A2', \"Columns A-G are read-only\")\n",
     "wks.set_dataframe(d_contact, (5, 1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# these should not be updated all the time\n",
-    "wks = sh[4]\n",
-    "wks.update_value('A1', \"County-level contact information, scraped from here: https://www.naccho.org/membership/lhd-directory\")\n",
-    "wks.update_value('A2', \"Columns A-C are read-only\")\n",
-    "wks.set_dataframe(df_c, (5, 1))"
    ]
   },
   {
