--- a/scraping/01_merge_in_county_contacts.ipynb
+++ b/scraping/01_merge_in_county_contacts.ipynb
@@ -9,10 +9,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -20,17 +31,22 @@
     "import seaborn as sns\n",
     "import pickle\n",
     "from tqdm import tqdm\n",
-    "import math"
+    "import math\n",
+    "import sys\n",
+    "sys.path.append('..')\n",
+    "import load_data\n",
+    "from copy import deepcopy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "with open(\"../data/df_county_level_cached.pkl\", 'rb') as f:\n",
     "    county_df = pickle.load(f)\n",
+    "# county_df = load_data.load_county_level(dir_mod='..')\n",
     "with open(\"countyFIPS_to_city.pkl\", 'rb') as f:\n",
     "    countyFIPS_to_city = pickle.load(f)\n",
     "contact_info = pd.read_csv(\"all_state_numbers.csv\", index_col = 0)"
@@ -38,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,15 +79,22 @@
     "        except:\n",
     "            return None, None\n",
     "    else:\n",
-    "        return None, None\n",
-    "# find_contact(entry, contact_info)"
+    "        return None, None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "3114it [00:10, 290.31it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "health_dept_names = []\n",
     "contact_numbers = []\n",
@@ -79,209 +102,124 @@
     "    result = find_contact(county, contact_info, idx)\n",
     "    health_dept_names.append(result[1])\n",
     "    contact_numbers.append(result[0])\n",
-    "county_df[\"HealthDeptName\"] = health_dept_names\n",
-    "county_df[\"HealthDeptContact\"] = contact_numbers"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**which keys were not matched**"
+    "df = deepcopy(county_df)\n",
+    "df[\"HealthDeptName\"] = health_dept_names\n",
+    "df[\"HealthDeptContact\"] = contact_numbers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
-    "unmatched_row_nums = [k for k in np.arange(contact_info.shape[0]) if not k in idxs_used]"
+    "matched_rows = ~df[\"HealthDeptContact\"].isna()\n",
+    "nofips_rows = [k for k in np.arange(contact_info.shape[0]) if not k in idxs_used]\n",
+    "\n",
+    "key_sort = 'StateName' # tot_deaths, StateName\n",
+    "df_matched = df[matched_rows].sort_values(by=key_sort, ascending=False)\n",
+    "df_nocontact = df[~matched_rows].sort_values(by=key_sort, ascending=False)\n",
+    "df_nocontact[\"HealthDeptName\"] = \"\"\n",
+    "df_nocontact[\"HealthDeptContact\"] = \"\"\n",
+    "df_nofips = contact_info.iloc[nofips_rows].rename(columns={'public_health': 'HealthDeptName', 'phone_number': 'HealthDeptContact'})\n",
+    "for k in ['CountyName', 'StateName', 'countyFIPS']:\n",
+    "    df_nofips[k] = ''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>state</th>\n",
-       "      <th>public_health</th>\n",
-       "      <th>phone_number</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>AL</td>\n",
-       "      <td>301 Health Center DrClanton, AL 35045-2349</td>\n",
-       "      <td>12057551287</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>67</th>\n",
-       "      <td>AL</td>\n",
-       "      <td>Tuscaloosa County Health Department</td>\n",
-       "      <td>12055626900</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>68</th>\n",
-       "      <td>AL</td>\n",
-       "      <td>Walker County Health Department</td>\n",
-       "      <td>12052219775</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>69</th>\n",
-       "      <td>AL</td>\n",
-       "      <td>Washington County Health Department</td>\n",
-       "      <td>12518472257</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>218</th>\n",
-       "      <td>CA</td>\n",
-       "      <td>Monterey County Health Department</td>\n",
-       "      <td>18317554585</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    state                               public_health phone_number\n",
-       "10     AL  301 Health Center DrClanton, AL 35045-2349  12057551287\n",
-       "67     AL         Tuscaloosa County Health Department  12055626900\n",
-       "68     AL             Walker County Health Department  12052219775\n",
-       "69     AL         Washington County Health Department  12518472257\n",
-       "218    CA           Monterey County Health Department  18317554585"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "contact_info.iloc[unmatched_row_nums].head(5)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**which counties don't have a health dept contact**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "780\n"
+      "matched 2334 nocontact 780 nofips 1081\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>CountyName</th>\n",
-       "      <th>StateName</th>\n",
-       "      <th>countyFIPS</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1824</th>\n",
-       "      <td>Kings</td>\n",
-       "      <td>New York</td>\n",
-       "      <td>36047</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1841</th>\n",
-       "      <td>Queens</td>\n",
-       "      <td>New York</td>\n",
-       "      <td>36081</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1721</th>\n",
-       "      <td>Clark</td>\n",
-       "      <td>Nevada</td>\n",
-       "      <td>32003</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1803</th>\n",
-       "      <td>Bronx</td>\n",
-       "      <td>New York</td>\n",
-       "      <td>36005</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1954</th>\n",
-       "      <td>Wake</td>\n",
-       "      <td>North Carolina</td>\n",
-       "      <td>37183</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     CountyName       StateName  countyFIPS\n",
-       "1824      Kings        New York       36047\n",
-       "1841     Queens        New York       36081\n",
-       "1721      Clark          Nevada       32003\n",
-       "1803      Bronx        New York       36005\n",
-       "1954       Wake  North Carolina       37183"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "missing_contact = county_df[county_df[\"HealthDeptContact\"].isna()].sort_values(by = \"PopulationEstimate2018\", ascending = False)\n",
-    "print(missing_contact.shape[0])\n",
-    "missing_contact[['CountyName', 'StateName', 'countyFIPS']].head(5)"
+    "print('matched', df_matched.shape[0], 'nocontact', df_nocontact.shape[0],\n",
+    "      'nofips', df_nofips.shape[0])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# upload to gsheets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pygsheets\n",
+    "gc = pygsheets.authorize(service_file='../creds.json')\n",
+    "\n",
+    "#open the google spreadsheet (where 'PY to Gsheet Test' is the name of my sheet)\n",
+    "sheet_name = 'Ventilator Demand Prediction'\n",
+    "sh = gc.open(sheet_name) # name of the hospital"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/accounts/projects/vision/.local/lib/python3.7/site-packages/pygsheets/worksheet.py:1304: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  df[col] = df[col].astype('unicode').replace('<NA>', nan)\n"
+     ]
+    }
+   ],
+   "source": [
+    "wks = sh[4]\n",
+    "wks.update_value('A1', \"County-level contact information, scraped from here: https://www.naccho.org/membership/lhd-directory\")\n",
+    "wks.update_value('A2', \"Columns A-E are read-only\")\n",
+    "wks.set_dataframe(df_matched[['CountyName', 'StateName', 'countyFIPS', 'HealthDeptName', 'HealthDeptContact']], (5, 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wks = sh[5]\n",
+    "wks.update_value('A1', \"County-level contact information for counties missing a contact #\")\n",
+    "wks.update_value('A2', \"Columns A-C are read-only\")\n",
+    "wks.set_dataframe(df_nocontact[['CountyName', 'StateName', 'countyFIPS', 'HealthDeptName', 'HealthDeptContact']], (5, 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wks = sh[6]\n",
+    "wks.update_value('A1', \"County-level contact information (not linked to a county)\")\n",
+    "wks.update_value('A2', \"Columns A-B are read-only\")\n",
+    "wks.set_dataframe(df_nofips[['HealthDeptName', 'HealthDeptContact', 'CountyName', 'StateName', 'countyFIPS']], (5, 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
