--- a/scraping/01_merge_in_county_contacts.ipynb
+++ b/scraping/01_merge_in_county_contacts.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Notebook to merge county level data with contact info"
+    "# Merge county level data with contact info"
    ]
   },
   {
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,13 +141,14 @@
     "df_nocontact[\"HealthDeptName\"] = \"\"\n",
     "df_nocontact[\"HealthDeptContact\"] = \"\"\n",
     "df_nofips = contact_info.iloc[nofips_rows].rename(columns={'public_health': 'HealthDeptName', 'phone_number': 'HealthDeptContact'})\n",
-    "for k in ['CountyName', 'StateName', 'countyFIPS']:\n",
-    "    df_nofips[k] = ''"
+    "for k in ['CountyName', 'countyFIPS']:\n",
+    "    df_nofips[k] = ''\n",
+    "df_nofips['StateName'] = df_nofips['state']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -223,15 +224,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
     "wks = sh[6]\n",
     "wks.update_value('A1', \"County-level contact information (not linked to a county)\")\n",
     "wks.update_value('A2', \"Columns A-B are read-only\")\n",
-    "wks.set_dataframe(df_nofips[['HealthDeptName', 'HealthDeptContact', 'CountyName', 'StateName', 'countyFIPS']], (5, 1))"
+    "wks.set_dataframe(df_nofips[['HealthDeptName', 'HealthDeptContact', 'StateName', 'CountyName', 'countyFIPS']], (5, 1))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
