duplicate gsheet pipeline

--- a/scraping/01_merge_in_county_contacts.ipynb
+++ b/scraping/01_merge_in_county_contacts.ipynb
@@ -173,26 +173,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/accounts/projects/vision/.local/lib/python3.7/site-packages/bs4/__init__.py:181: UserWarning: No parser was explicitly specified, so I'm using the best available HTML parser for this system (\"lxml\"). This usually isn't a problem, but if you run this code on another system, or in a different virtual environment, it may use a different parser and behave differently.\n",
-      "\n",
-      "The code that caused this warning is on line 193 of the file /usr/local/linux/anaconda3.7/lib/python3.7/runpy.py. To get rid of this warning, change code that looks like this:\n",
-      "\n",
-      " BeautifulSoup(YOUR_MARKUP})\n",
-      "\n",
-      "to this:\n",
-      "\n",
-      " BeautifulSoup(YOUR_MARKUP, \"lxml\")\n",
-      "\n",
-      "  markup_type=markup_type))\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -226,51 +209,23 @@
        "      <td>AL</td>\n",
        "      <td>Autauga</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>01003</td>\n",
-       "      <td>AL</td>\n",
-       "      <td>Baldwin</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>01005</td>\n",
-       "      <td>AL</td>\n",
-       "      <td>Barbour</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>01007</td>\n",
-       "      <td>AL</td>\n",
-       "      <td>Bibb</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>01009</td>\n",
-       "      <td>AL</td>\n",
-       "      <td>Blount</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
        "  countyFIPS state CountyName\n",
-       "0      01001    AL    Autauga\n",
-       "1      01003    AL    Baldwin\n",
-       "2      01005    AL    Barbour\n",
-       "3      01007    AL       Bibb\n",
-       "4      01009    AL     Blount"
+       "0      01001    AL    Autauga"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "oracleFIPS = helper.get_fips_df()\n",
-    "oracleFIPS.head()"
+    "oracleFIPS.head(1)"
    ]
   },
   {
