--- a/modeling/05_exponential_model.ipynb
+++ b/modeling/05_exponential_model.ipynb
@@ -66,14 +66,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 268,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'load_data' has no attribute 'outcome_deaths'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-268-18496d6110d5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mload_data\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload_county_level\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdir_mod\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'../'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0moutcome_deaths\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'#Deaths_3/26/20'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msort_values\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mload_data\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moutcome_deaths\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mascending\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;31m#outcome_cases = load_data.outcome_cases # most recent day\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m#outcome_deaths = load_data.outcome_deaths\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'load_data' has no attribute 'outcome_deaths'"
+     ]
+    }
+   ],
    "source": [
     "df = load_data.load_county_level(dir_mod = '../')\n",
+    "outcome_deaths = '#Deaths_3/26/20'\n",
     "df = df.sort_values(load_data.outcome_deaths, ascending=False)\n",
-    "outcome_cases = load_data.outcome_cases # most recent day\n",
-    "outcome_deaths = load_data.outcome_deaths\n",
+    "#outcome_cases = load_data.outcome_cases # most recent day\n",
+    "#outcome_deaths = load_data.outcome_deaths\n",
     "important_vars = load_data.important_keys(df)"
    ]
   },
@@ -319,6 +332,92 @@
     "plt.plot(axis_lim, axis_lim, ls=\"--\", c=\".3\")\n",
     "\n",
     "## overestimaing most of the time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 261,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = fit_and_predict.get_forecasts(df,\n",
+    "                                  outcome='deaths',\n",
+    "                                  method='exponential',\n",
+    "                                  output_key='predicted_deaths_exponential')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 263,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "908     [438.00256028123505]\n",
+       "1425    [126.69135036605057]\n",
+       "554     [47.638387516174426]\n",
+       "925     [23.701248308856158]\n",
+       "124     [22.972122323948984]\n",
+       "                ...         \n",
+       "539                      [0]\n",
+       "538                      [0]\n",
+       "535                      [0]\n",
+       "534                      [0]\n",
+       "1502                     [0]\n",
+       "Name: predicted_deaths_exponential, Length: 1503, dtype: object"
+      ]
+     },
+     "execution_count": 263,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['predicted_deaths_exponential']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 265,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = fit_and_predict.get_forecasts(df,\n",
+    "                                  outcome='deaths',\n",
+    "                                  method='shared_exponential',\n",
+    "                                  output_key='predicted_deaths_shared_exponential')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 266,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "908      [371.9680830820316]\n",
+       "1425    [127.65290201358455]\n",
+       "554     [45.951547383231016]\n",
+       "925      [24.72246139183316]\n",
+       "124     [21.043517940651277]\n",
+       "                ...         \n",
+       "539     [1.0258802741679378]\n",
+       "538     [1.0258802741679378]\n",
+       "535     [1.0258802741679378]\n",
+       "534     [1.0258802741679378]\n",
+       "1502    [1.0258802741679378]\n",
+       "Name: predicted_deaths_shared_exponential, Length: 1503, dtype: object"
+      ]
+     },
+     "execution_count": 266,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['predicted_deaths_shared_exponential']"
    ]
   },
   {
