--- a/02_hospital_ventilators.ipynb
+++ b/02_hospital_ventilators.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -37,11 +37,12 @@
     "outcomes = ['tot_cases', 'tot_deaths']\n",
     "df_hospital = load_data.load_hospital_level()\n",
     "df_county = load_data.load_county_level()\n",
-    "df_county = df_county.sort_values(load_data.outcome_deaths, ascending=False)\n",
-    "NUM_DAYS_LIST = [1, 3, 5]\n",
+    "df_county = df_county.sort_values('tot_deaths', ascending=False)\n",
+    "NUM_DAYS_LIST = [1, 2, 3]\n",
     "# df_county = exponential_modeling.estimate_deaths(df_county) # adds key \n",
     "for num_days_in_future in NUM_DAYS_LIST: # 1 is tomorrow\n",
     "    df_county = exponential_modeling.estimate_deaths(df_county, \n",
+    "                                                     mode='predict_future',\n",
     "                                                     method='exponential',\n",
     "                                                     target_day=[num_days_in_future],\n",
     "                                                     output_key=f'Predicted Deaths {num_days_in_future}-day') # adds key \n",
@@ -57,6 +58,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -70,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +86,7 @@
     "remap = {\n",
     "    '#ICU_beds': 'ICU Beds in County',\n",
     "    'County Name_x': 'County Name',\n",
-    "    'Facility Name_x': 'Facility Name',\n",
+    "    'Facility Name_x': 'Hospital Name',\n",
     "    'tot_deaths': 'Tot Deaths',\n",
     "    'tot_cases': 'Tot Cases',\n",
     "}\n",
@@ -96,25 +104,57 @@
     "    df[f'Vent Supply {n}-day'] = df['ICU Beds'].fillna(0)\n",
     "    df[f'Vent Needed {n}-day'] = df[f'Vent Demand {n}-day'] - df[f'Vent Supply {n}-day']\n",
     "    df[f'Vent Needed {n}-day'] = df[f'Vent Needed {n}-day'].apply(lambda x: max(0, x)).astype(int)\n",
+    "    df[f'Severity {n}-day'] = df[f'Vent Needed {n}-day']\n",
+    "    df[f'Severity {n}-day'] = 1 + 4 * df[f'Severity {n}-day'] // df[f'Severity {n}-day'].max() # [1-5]\n",
     "df['Num Shipped'] = 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Unnamed: 0', 'CMS Certification Number', 'Facility Name',\n",
+       "       'Street Address_x', 'City_x', 'State_x', 'ZIP', 'System Affiliation',\n",
+       "       'Type of Facility', 'Total Employees',\n",
+       "       ...\n",
+       "       'Severity 1-day', 'Vent Demand 2-day', 'Vent Supply 2-day',\n",
+       "       'Vent Needed 2-day', 'Severity 2-day', 'Vent Demand 3-day',\n",
+       "       'Vent Supply 3-day', 'Vent Needed 3-day', 'Severity 3-day',\n",
+       "       'Num Shipped'],\n",
+       "      dtype='object', length=7521)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "# make smaller df\n",
     "outcome_keys = ['Tot Cases', 'Tot Deaths']\n",
     "vent_keys = []\n",
+    "severity_keys = []\n",
     "for n in NUM_DAYS_LIST:\n",
+    "    severity_keys.append(f'Severity {n}-day')\n",
     "    for k in ['Vent Needed', 'Vent Demand', 'Vent Supply']:\n",
     "        vent_keys.append(k + f' {n}-day')\n",
     "\n",
     "county_info_keys = ['County Name']\n",
     "county_meta_keys = ['ICU Beds in County', 'City']\n",
-    "hospital_keys = ['Facility Name']\n",
+    "hospital_keys = ['Hospital Name']\n",
     "hospital_contact_keys = ['Website',  'Phone Number']\n",
     "hospital_meta_keys = ['ICU Beds', 'Total Beds', 'Total Employees', 'Hospital Type',\n",
     "                      'Frac ICU Beds of County', 'Mortality national comparison',\n",
@@ -122,44 +162,15 @@
     "\n",
     "# d contains all these keys\n",
     "d = df[outcome_keys + vent_keys + county_info_keys + county_meta_keys + \\\n",
-    "       hospital_keys + hospital_contact_keys + hospital_meta_keys + ['Num Shipped', 'TIN', 'countyFIPS']].round(2)\n",
+    "       hospital_keys + hospital_contact_keys + hospital_meta_keys + ['Num Shipped', 'CMS Certification Number', 'countyFIPS']].round(2)\n",
     "\n",
     "# things to output\n",
-    "d_vent = d[vent_keys + hospital_keys + county_info_keys + ['TIN', 'countyFIPS'] ]\n",
-    "contact_df_keys = hospital_keys + county_info_keys + ['City'] + hospital_contact_keys + ['TIN', 'countyFIPS'] \n",
+    "d_severity = df[severity_keys + hospital_keys + ['CMS Certification Number', 'countyFIPS'] ]\n",
+    "d_vent = d[vent_keys + hospital_keys + county_info_keys + ['CMS Certification Number', 'countyFIPS'] ]\n",
+    "contact_df_keys = hospital_keys + county_info_keys + ['City'] + hospital_contact_keys + ['CMS Certification Number', 'countyFIPS'] \n",
     "d_contact = d[contact_df_keys]\n",
-    "d_shipped = df[['Num Shipped'] + hospital_keys + county_info_keys + ['TIN', 'countyFIPS']]\n",
-    "d_full = d.drop(hospital_contact_keys, axis='columns')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# contact info per county\n",
-    "remap2 = {\n",
-    "    'tot_deaths': 'Tot Deaths'\n",
-    "}\n",
-    "df_county_keys = ['CountyName', 'countyFIPS', 'Tot Deaths']\n",
-    "df_county = df_county.rename(columns=remap2)\n",
-    "df_c = df_county[df_county_keys]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**look at most affected hospitals**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "d_shipped = df[['Num Shipped'] + hospital_keys + county_info_keys + ['CMS Certification Number', 'countyFIPS']]\n",
+    "d_full = d.drop(hospital_contact_keys, axis='columns')\n",
     "# d.groupby('countyFIPS').head(1).head(8) # look at top counties"
    ]
   },
@@ -181,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,30 +205,22 @@
     "# ventilator\n",
     "wks = sh[0] #select a sheet\n",
     "wks.update_value('A1', \"Note: this sheet is read-only (automatically generated by the data and model)\")\n",
+    "wks.set_dataframe(d_severity, (3, 1)) #update the first sheet with df, starting at cell B2. \n",
+    "\n",
+    "# ventilator\n",
+    "wks = sh[1] #select a sheet\n",
+    "wks.update_value('A1', \"Note: this sheet is read-only (automatically generated by the data and model)\")\n",
     "wks.set_dataframe(d_vent, (3, 1)) #update the first sheet with df, starting at cell B2. \n",
     "\n",
     "# full metadata\n",
-    "wks = sh[1]\n",
+    "wks = sh[2]\n",
     "wks.update_value('A1', \"Note: this sheet is read-only (automatically generated by the data and model)\")\n",
     "wks.set_dataframe(d_full, (3, 1))\n",
     "\n",
     "# full metadata\n",
-    "wks = sh[2]\n",
+    "wks = sh[3]\n",
     "wks.update_value('A1', \"Note: this sheet keeps track of number of shipped ventilators)\")\n",
     "wks.set_dataframe(d_shipped, (3, 1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# these should not be updated all the time\n",
-    "wks = sh[3]\n",
-    "wks.update_value('A1', \"Hospital-level contact information\")\n",
-    "wks.update_value('A2', \"Columns A-G are read-only\")\n",
-    "wks.set_dataframe(d_contact, (5, 1))"
    ]
   },
   {
