move contact info data

--- a/data/health_dept_contact_info/01_merge_in_county_contacts.ipynb
+++ b/data/health_dept_contact_info/01_merge_in_county_contacts.ipynb
@@ -1,15 +1,8 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Merge county level data with contact info"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -29,23 +22,15 @@
     "%matplotlib inline\n",
     "import seaborn as sns\n",
     "import pickle\n",
+    "from os.path import join as oj\n",
     "from tqdm import tqdm\n",
     "import math\n",
     "import sys\n",
-    "sys.path.append('..')\n",
-    "import load_data\n",
+    "import pandas as pd\n",
+    "sys.path.append('../../')\n",
     "from copy import deepcopy\n",
     "from functions import load_usafacts_data\n",
     "import helper"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_covid = load_usafacts_data.load_daily_data(dir_mod='../')"
    ]
   },
   {
@@ -54,7 +39,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"../data/df_county_level_cached.pkl\", 'rb') as f:\n",
+    "data_dir = '../..'\n",
+    "df_covid = load_usafacts_data.load_daily_data(dir_mod='../..')\n",
+    "with open(oj(data_dir, 'data/df_county_level_cached.pkl'), 'rb') as f:\n",
     "    county_df = pickle.load(f)\n",
     "# county_df = load_data.load_county_level(dir_mod='..')\n",
     "with open(\"countyFIPS_to_city.pkl\", 'rb') as f:\n",
@@ -64,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,17 +81,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "3114it [00:10, 296.88it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "health_dept_names = []\n",
     "contact_numbers = []\n",
@@ -115,6 +94,33 @@
     "df = deepcopy(county_df)\n",
     "df[\"HealthDeptName\"] = health_dept_names\n",
     "df[\"HealthDeptContact\"] = contact_numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--2020-03-28 09:43:22--  https://github.com/Yu-Group/covid-19-ventilator-demand-prediction/blob/4bd43c43d1068f0ccb9eb35725b4897ea408f147/scraping/countyFIPS_to_city.pkl\n",
+      "Resolving github.com (github.com)... 140.82.114.4\n",
+      "Connecting to github.com (github.com)|140.82.114.4|:443... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: unspecified [text/html]\n",
+      "Saving to: ‘countyFIPS_to_city.pkl’\n",
+      "\n",
+      "countyFIPS_to_city.     [ <=>                ]  65.20K   425KB/s    in 0.2s    \n",
+      "\n",
+      "2020-03-28 09:43:22 (425 KB/s) - ‘countyFIPS_to_city.pkl’ saved [66764]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "!wget https://github.com/Yu-Group/covid-19-ventilator-demand-prediction/blob/4bd43c43d1068f0ccb9eb35725b4897ea408f147/scraping/countyFIPS_to_city.pkl"
    ]
   },
   {
